Don't invalidate buffers in vnop_inactive. Fix fsync

--- a/lib/libpuffs/puffs_ops.3
+++ b/lib/libpuffs/puffs_ops.3
@@ -114,7 +114,7 @@
 .Ft int
 .Fo puffs_node_fsync
 .Fa "struct puffs_usermount *pu" "puffs_cookie_t opc"
-.Fa "const struct puffs_cred *pcr" "int flags" "off_t offlo" "off_t offhi"
+.Fa "int flags"
 .Fc
 .Ft int
 .Fo puffs_node_seek
